# ToyServer2

./: .Gemini.md  .clang-format  .clangd  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  LICENSE  PlayerBaseSkill.json  PlayerData.json  README.md  ReproduceSecurityIssues.bat  RunDummyClient.bat  RunStressTest.bat  RunTests.bat  RunTickClient.bat  RunVsClient.bat  RunVsServer.bat  WaveData.json  build.bat  build_debug.bat  build_release.bat  compile_flags.txt  game.db-shm  game.db-wal  gen_compile_commands.bat  get_line_count.ps1  rebuild.bat  run.bat  run_line_count.bat  run_lint.bat  run_release.bat  run_unity_test.bat  server_config.json  setup_ninja.bat  simple_game_config.json  stress_test.bat  stress_test_release.bat  test_echo.ps1  vcpkg.json  (+2 more)
.agent/rules/: coding_protocol.md
.agent/workflows/: commit-message.md  cpp-server-expert.md  orchestrator.md  unity-expert.md  wrapup.md
data/: MonsterData.json  PassiveData.json  PlayerBaseSkill.json  PlayerData.json  WaveData.json  WeaponData.json  benchmark_server_config.json  server_config.json  simple_game_config.json  vampire_server_config.json
doc/: 2025-12-10_DevLog.md  2025-12-11_DevLog.md  2025-12-12_DevLog.md  2025-12-13_DevLog.md  2025-12-14_DevLog.md  2025-12-15_DevLog.md  2025-12-17_DevLog.md  2025-12-18_DevLog.md  2025-12-19_DevLog.md  2025-12-20_DevLog.md  2025-12-20_devLog_append.md  2025-12-21_DevLog.md  2026-01-09_DevLog.md  2026-01-10_DevLog_Sync.md  2026-01-12_DevLog.md  2026-01-12_DevLog_TickSync.md  2026-01-13_DevLog.md  2026-01-14_DevLog.md  2026-01-15_DevLog.md  2026-01-17_DevLog.md  2026-01-18_DevLog.md  2026-01-20_DevLog.md  2026-01-27_DevLog.md  2026-01-30_DevLog.md  2026-01-30_Performance_Session.md  2026-02-02_DevLog.md  2026-02-07_DevLog.md  2026-02-10_DevLog.md  2026-02-12_DevLog.md  2026-02-16_Crash_Analysis_Fix.md  2026-02-16_DevLog.md  2026-02-16_HighLoad_Memory_Analysis.md  2026-02-17_DevLog_TestFix.md  2026-02-17_Room_Update_Async_Optimization.md  2026-02-19_DevLog.md  2026-02-24_DevLog.md  2026-02-25_DevLog.md  2026-03-04_ChatUISystem_Plan.md  CombatSystem_Requirements.md  Combat_MVP_Plan.md  (+36 more)
doc/code_review/: 2026_02_19_System_Audit_Report.md  2026_02_19_System_Review.md
doc/investigation/: Crash_Root_Cause.md  Protobuf_Crash_Analysis_Handover.md
doc/learning/: 2026_02_19_Protobuf_Crash_Analysis.md
doc/optimization/: cell_based_physics_optimization.md  dod_monster_system.md
doc/reports/: Performance_Benchmark_Report.md  UDP_Send_Path_Fix_Report_20260207.md
doc/specs/: GameWeapon_Spec.md  HighPerformanceUDP.md  StatModifierSystem_Spec.md
docker/: docker-compose.yml  start_services.sh
src/DummyClient/: main.cpp
src/GameServer/: ServerPacketHandler.h  main.cpp
src/Share/: EchoPacket.h  Protocol.cpp  Protocol.h
src/System/: ICommandConsole.h  IConfig.h  IDatabase.h  IFramework.h  ILog.h  IObjectPool.h  ISession.h  ITimer.h  Packet.h  PacketView.h  Pch.h  ToyServerSystem.h
src/System/Config/: ConfigLoader.h
src/System/Console/: CommandConsole.cpp  CommandConsole.h
src/System/Database/: DBConnectionPool.cpp  DBConnectionPool.h  DatabaseImpl.cpp  DatabaseImpl.h  DatabaseRegistry.cpp  DatabaseRegistry.h  IConnection.h  IConnectionFactory.h  IDatabaseConnection.h  SQLiteConnection.h
src/System/Debug/: CrashHandler.cpp  CrashHandler.h  MemoryMetrics.cpp  MemoryMetrics.h
src/System/Dispatcher/: IDispatcher.h  IMessage.h  IPacketHandler.h  MessagePool.cpp  MessagePool.h  SystemMessages.h
src/System/Events/: EventBus.h
src/System/Framework/: Framework.cpp  Framework.h
src/System/Internal/: PacketStorage.cpp  PacketStorage.h
src/System/Log/: LogImpl.cpp
src/System/MQ/: IMessageDriver.h  MessageQoS.h  MessageSystem.cpp  MessageSystem.h  NatsDriver.cpp  NatsDriver.h  RedisStreamDriver.cpp  RedisStreamDriver.h
src/System/Math/: MathUtil.h
src/System/Memory/: GenerationalID.h  LockFreeObjectPool.h  MemoryManager.cpp  ObjectPool.h  PacketPool.cpp  PacketPool.h  RefCounted.h  RefPtr.h  SimplePool.h
src/System/Metrics/: IMetrics.h  MetricsCollector.cpp  MetricsCollector.h
src/System/Monitor/: IMonitor.h
src/System/Network/: AesEncryption.cpp  AesEncryption.h  ByteBuffer.h  GenerateUDPToken.h  INetwork.h  IPacketEncryption.h  ISession.h  NetworkImpl.cpp  NetworkImpl.h  Packet.h  PacketUtils.cpp  PacketUtils.h  RateLimiter.h  RecvBuffer.cpp  RecvBuffer.h  UDPEndpointRegistry.cpp  UDPEndpointRegistry.h  UDPLimits.h  UDPNetworkImpl.cpp  UDPNetworkImpl.h  UDPSendContextPool.cpp  UDPSendContextPool.h  UDPTransportHeader.h  WebSocketNetworkImpl.cpp  WebSocketNetworkImpl.h  WebSocketSession.cpp  WebSocketSession.h  XorEncryption.h
src/System/Packet/: IPacket.h  PacketBase.h  PacketBroadcast.h  PacketBuilder.h  PacketHeader.h  PacketPool.h  PacketPtr.h  SharedPacket.h
src/System/Session/: BackendSession.cpp  BackendSession.h  GatewaySession.cpp  GatewaySession.h  Session.cpp  Session.h  SessionCommon.h  SessionContext.cpp  SessionContext.h  SessionFactory.cpp  SessionFactory.h  SessionPool.h  UDPSession.cpp  UDPSession.h
src/System/Thread/: IStrand.h  IThreadPool.h  Strand.h  ThreadPool.cpp  ThreadPool.h
src/System/Timer/: AsioTimer.cpp  ITimer.h  Timer.cpp  TimerHandle.h  TimerImpl.cpp  TimerImpl.h  TimingWheel.h
src/TickSyncClient/: main.cpp
src/Tools/StressTest/: CMakeLists.txt  StressTestClient.cpp  StressTestClient.h  main.cpp
tests/: CMakeLists.txt  LogPerformanceTest.cpp  TestAsyncDatabase.cpp  TestBroadcastBenchmark.cpp  TestByteBuffer.cpp  TestCommandConsole.cpp  TestDBConnectionPool.cpp  TestDispatcherBenchmark.cpp  TestEventBus_Mock.cpp  TestGatherWriteBenchmark.cpp  TestKCP.cpp  TestLockFreeObjectPool.cpp  TestMQ.cpp  TestMemoryBench.cpp  TestMessagePoolExpansion.cpp  TestMetrics.cpp  TestPerformance.cpp  TestRateLimiter.cpp  TestRefPtr.cpp  TestSecurityReproduction.cpp  TestSmartNotifyBenchmark.cpp  TestSpatialGrid.cpp  TestThreadPool.cpp  TestUDPEndpointRegistry.cpp  TestUDPNetwork.cpp
tools/MonitorDashboard/: monitor.html
tools/Performance/: monitor_server.ps1
tools/StressTest/: light_wave.json
tools/WsVisualizer/: index.html
(+209 files in other folders)
